--- a/templates/project/partials/_grid.sass
+++ b/templates/project/partials/_grid.sass
@@ -7,8 +7,11 @@
 
 @import grid-coordinates/grid
 
-//  The following generates the CSS for the grid
-//  This is already done for you by the plugin
+//  The following code generates the required CSS for your grid
+//  This is just an example. It is already done for you inside the plugin
+//
+//  See below for an example on how to use Grid Coordinates
+//  using the mixin method using semantic markup and selectors
 //
 //  .grid_container
 //    +grid-container
@@ -42,15 +45,14 @@
 //      &.full
 //        +grid-full
 
-//  Like most Compass users, I prefer to build semantic layouts
-//  For example:
+//  Like most Compass users, I build my layouts with semantic markup and selectors
 //
 //  #branding, #page, #footer
 //    +grid-container
 //  
 //  #branding
 //    +grid(4)
-//  #nav_aux
+//  #nav_main
 //    +grid(8)
 //  
 //  #page_body
