--- a/sass/grid-coordinates/grid.sass
+++ b/sass/grid-coordinates/grid.sass
@@ -1,17 +1,22 @@
-//  ----------------------------------------------------------------------------
-//  Grid Coordinates is based on Tyler Tate's 1kb CSS Grid project (1kbgrid.com)
-//  ----------------------------------------------------------------------------
+//  --------------------------------------------------------------------------------
+//  Grid Coordinates was inspired by Tyler Tate's 1kb CSS Grid project (1kbgrid.com)
+//  --------------------------------------------------------------------------------
 //  The default grid is 960px wide, 12 columns at 60px each with a 20px gutter.
 //
-//  Update the 4 variables below to change your grid setup.
+//  Set the 3 variables below to define your grid coordinates.
 //  Use 1kbgrid.com as a guide to the various grid coordinates possible.
 
 @import compass/utilities
 
-!grid_width ||= 960px
+//  How many grid columns would you like?
 !grid_columns ||= 12
+//  How many pixels wide would you like each column to be?
 !grid_pixels ||= 60px
+//  How many pixels wide would you like the gutter to be?
 !grid_gutter_width ||= 20px
+
+//  Set grid width
+!grid_width = (!grid_columns * !grid_pixels) + (!grid_columns * !grid_gutter_width)
 
 =grid(!grid_columns)
   +column
@@ -25,59 +30,30 @@
   margin = 0 !grid_gutter_width / 2
   overflow: hidden
 
-=grid-container(!nested = "nil")
-  @if !nested == "nested"
-    margin: 0
-      left = -!grid_gutter_width / 2
-      right = -!grid_gutter_width / 2
-    display: inline-block
-    width: auto
+=grid-container
+  margin: 0 auto
+  overflow: hidden
+  width = !grid_width
+
+=nested-grid-container
+  display: inline-block
+  margin:
+    left = -!grid_gutter_width / 2
+    right = -!grid_gutter_width / 2
+  overflow: hidden
+  width: auto
+
+=grid-prefix(!grid_columns)
+  @if !grid_columns == 1
+    padding-left = !grid_pixels + !grid_gutter_width
   @else
-    margin: 0 auto
-    overflow: hidden
-    width = !grid_width
+    padding-left = (!grid_columns * !grid_pixels) + (!grid_columns * !grid_gutter_width)
+
+=grid-suffix(!grid_columns)
+  @if !grid_columns == 1
+    padding-right = !grid_pixels + !grid_gutter_width
+  @else
+    padding-right = (!grid_columns * !grid_pixels) + (!grid_columns * !grid_gutter_width)
 
 =grid-full
   +grid(!grid_columns)
-
-.grid_container
-  +grid-container
-  &.nested
-    +grid-container("nested")
-  .grid
-    &.one
-      +grid(1)
-    &.two
-      +grid(2)
-    &.three
-      +grid(3)
-    &.four
-      +grid(4)
-    &.five
-      +grid(5)
-    &.six
-      +grid(6)
-    &.seven
-      +grid(7)
-    &.eight
-      +grid(8)
-    &.nine
-      +grid(9)
-    &.ten
-      +grid(10)
-    &.eleven
-      +grid(11)
-    &.twelve
-      +grid(12)
-    &.full
-      +grid-full
-  
-  //  Example styling for prototyping a grid with text labels
-  //  As seen here: http://flickr.com/ ...#TODO
-  .example
-    p
-      background: #333 !important
-      border: 1px solid #000 !important
-      color: #fff !important
-      line-height: 70px !important
-      text-align: center !important
