Abstracted out grid-width logic so that it can be used in a more extensible way for complex situations. (via perezd)

--- a/grid-coordinates.sass
+++ b/grid-coordinates.sass
@@ -20,6 +20,9 @@
 
 =grid(!grid_columns)
   +column
+  +grid-width(!grid-columns)
+
+=grid-width(!grid-columns)
   @if !grid_columns == 1
     width = !grid_pixels
   @else
