--- a/grid-coordinates.sass
+++ b/grid-coordinates.sass
@@ -6,57 +6,59 @@
 //  Set the 3 variables below to define your grid coordinates.
 //  Use 1kbgrid.com as a guide to the various grid coordinates possible.
 
-@import compass/utilities
+@import "compass/utilities"
 
 //  How many grid columns would you like?
-!grid_columns ||= 12
+$grid_columns: 12 $default
+
 //  How many pixels wide would you like each column to be?
-!grid_pixels ||= 60px
+$grid_pixels: 60px $default
+
 //  How many pixels wide would you like the gutter to be?
-!grid_gutter_width ||= 20px
+$grid_gutter_width: 20px $default
 
 //  Set grid width
-!grid_width = (!grid_columns * !grid_pixels) + (!grid_columns * !grid_gutter_width)
+$grid_width: $grid_columns * $grid_pixels + $grid_columns * $grid_gutter_width
 
-=grid(!grid_columns)
+=grid($grid_columns)
   +column
-  +grid-width(!grid-columns)
+  +grid-width($grid-columns)
 
-=grid-width(!grid-columns)
-  @if !grid_columns == 1
-    width = !grid_pixels
+=grid-width($grid-columns)
+  @if $grid_columns == 1
+    width: $grid_pixels
   @else
-    width = (!grid_columns * !grid_pixels) + (!grid_columns * !grid_gutter_width - !grid_gutter_width)
+    width: $grid_columns * $grid_pixels + $grid_columns * $grid_gutter_width - $grid_gutter_width
 
 =column
   +float-left
-  margin = 0 !grid_gutter_width / 2
+  margin: 0 $grid_gutter_width / 2
   overflow: hidden
 
 =grid-container
   margin: 0 auto
   overflow: hidden
-  width = !grid_width
+  width: $grid_width
 
 =nested-grid-container
   display: inline-block
   margin:
-    left = -!grid_gutter_width / 2
-    right = -!grid_gutter_width / 2
+    left: -$grid_gutter_width / 2
+    right: -$grid_gutter_width / 2
   overflow: hidden
   width: auto
 
-=grid-prefix(!grid_columns)
-  @if !grid_columns == 1
-    padding-left = !grid_pixels + !grid_gutter_width
+=grid-prefix($grid_columns)
+  @if $grid_columns == 1
+    padding-left: $grid_pixels + $grid_gutter_width
   @else
-    padding-left = (!grid_columns * !grid_pixels) + (!grid_columns * !grid_gutter_width)
+    padding-left: $grid_columns * $grid_pixels + $grid_columns * $grid_gutter_width
 
-=grid-suffix(!grid_columns)
-  @if !grid_columns == 1
-    padding-right = !grid_pixels + !grid_gutter_width
+=grid-suffix($grid_columns)
+  @if $grid_columns == 1
+    padding-right: $grid_pixels + $grid_gutter_width
   @else
-    padding-right = (!grid_columns * !grid_pixels) + (!grid_columns * !grid_gutter_width)
+    padding-right: $grid_columns * $grid_pixels + $grid_columns * $grid_gutter_width
 
 =grid-full
-  +grid(!grid_columns)
+  +grid($grid_columns)
