--- a/sample.sass
+++ b/sample.sass
@@ -1,10 +1,10 @@
 //  Lock in the grid coordinates
 
-!grid_columns ||= 12
-!grid_pixels ||= 60px
-!grid_gutter_width ||= 20px
+$grid_columns: 12
+$grid_pixels: 60px
+$grid_gutter_width: 20px
 
-@import grid-coordinates.sass
+@import "_grid-coordinates.sass"
 
 #header, #page, #footer
   +grid-container
