That's ! not $ for defaults. Oops.

--- a/_grid-coordinates.sass
+++ b/_grid-coordinates.sass
@@ -9,13 +9,13 @@
 @import "compass/utilities"
 
 //  How many grid columns would you like?
-$grid_columns: 12 $default
+$grid_columns: 12 !default
 
 //  How many pixels wide would you like each column to be?
-$grid_pixels: 60px $default
+$grid_pixels: 60px !default
 
 //  How many pixels wide would you like the gutter to be?
-$grid_gutter_width: 20px $default
+$grid_gutter_width: 20px !default
 
 //  Set grid width
 $grid_width: $grid_columns * $grid_pixels + $grid_columns * $grid_gutter_width
