Slight update to the sample.sass file

--- a/sample.sass
+++ b/sample.sass
@@ -1,10 +1,9 @@
-//  Lock in the grid coordinates
+@import "path/to/grid-coordinates"
 
+//  Lock in the grid coordinates
 $grid_columns: 12
 $grid_pixels: 60px
 $grid_gutter_width: 20px
-
-@import "_grid-coordinates.sass"
 
 #header, #page, #footer
   +grid-container
