Updated to be a Compass extension. Also updated the syntax to .scss and updated the readme details

--- a/templates/project/screen.sass
+++ b/templates/project/screen.sass
@@ -1,9 +1,9 @@
-@import "path/to/grid-coordinates"
-
-//  Lock in the grid coordinates
+//  Grid Coordinates configuration
 $grid_columns: 12
 $grid_pixels: 60px
 $grid_gutter_width: 20px
+
+@import "path/to/grid-coordinates"
 
 #header, #page, #footer
   +grid-container
