--- a/templates/project/screen.sass
+++ b/templates/project/screen.sass
@@ -1,7 +1,7 @@
 //  Configure grid coordinates
-$grid_columns: 12
-$grid_pixels: 60px
-$grid_gutter_width: 20px
+$grid-columns: 12
+$grid-pixels: 60px
+$grid-gutter-width: 20px
 
 @import path/to/grid-coordinates
 
