--- a/stylesheets/_grid-coordinates.scss
+++ b/stylesheets/_grid-coordinates.scss
@@ -24,17 +24,20 @@ $grid-width: $grid-columns * $grid-pixels + $grid-columns * $grid-gutter-width;
   @include column;
   @include grid-width($grid-columns); }
 
+// Used internatlly to the extension only
+@mixin column {
+  @include float-left;
+  margin: 0 $grid-gutter-width / 2;
+  overflow: hidden; }
+
+// Used internatlly to the extension only
 @mixin grid-width($grid-columns) {
   @if $grid-columns == 1 {
     width: $grid-pixels; }
   @else {
     width: $grid-columns * $grid-pixels + $grid-columns * $grid-gutter-width - $grid-gutter-width; } }
 
-@mixin column {
-  @include float-left;
-  margin: 0 $grid-gutter-width / 2;
-  overflow: hidden; }
-
+// Mixins used to create, define and manipulate the grid
 @mixin grid-container {
   margin: 0 auto;
   overflow: hidden;
