--- a/templates/project/index.haml
+++ b/templates/project/index.haml
@@ -6,14 +6,18 @@
   %body{:id => body_id, :class => body_class}
     #header
       #brand
-        %p brand
+        .content
+          %p brand
       #nav
-        %p nav
+        .content
+          %p nav
     #page
       #page-body
-        %p page-body
+        .content
+          %p page-body
       #page-sidebar
-        %p page-sidebar
+        .content
+          %p page-sidebar
     #footer
-      #footer-body
+      .content
         %p footer
