--- a/templates/project/screen.css
+++ b/templates/project/screen.css
@@ -1,71 +1,279 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-weight: inherit;
+  font-style: inherit;
+  font-size: 100%;
+  font-family: inherit;
+  vertical-align: baseline;
+}
+
+body {
+  line-height: 1;
+  color: black;
+  background: white;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+table {
+  border-collapse: separate;
+  border-spacing: 0;
+  vertical-align: middle;
+}
+
+caption, th, td {
+  text-align: left;
+  font-weight: normal;
+  vertical-align: middle;
+}
+
+q, blockquote {
+  quotes: "" "";
+}
+q:before, q:after, blockquote:before, blockquote:after {
+  content: "";
+}
+
+a img {
+  border: none;
+}
+
 body {
   font: bold 14px helvetica, arial, sans-serif;
   padding-top: 20px;
 }
 
-#header, #page, #footer {
+/* Grid-Coordinates by Adam Stacoviak
+ * Fork me: http://adamstac.com/grid-coordinates */
+.grid-container, #header, #page, #footer {
   margin: 0 auto;
   overflow: hidden;
   width: 960px;
 }
 
-#brand {
+.nested-grid-container {
+  display: inline-block;
+  margin-left: -10px;
+  margin-right: -10px;
+  overflow: hidden;
+  width: auto;
+}
+
+.grid-1 {
+  width: 60px;
   display: inline;
   float: left;
   margin: 0 10px;
   overflow: hidden;
+}
+
+.grid-2 {
+  width: 140px;
+  display: inline;
+  float: left;
+  margin: 0 10px;
+  overflow: hidden;
+}
+
+.grid-3, #brand {
+  width: 220px;
+  display: inline;
+  float: left;
+  margin: 0 10px;
+  overflow: hidden;
+}
+
+.grid-4, #page-sidebar {
   width: 300px;
-}
-
-#nav {
   display: inline;
   float: left;
   margin: 0 10px;
   overflow: hidden;
+}
+
+.grid-5 {
+  width: 380px;
+  display: inline;
+  float: left;
+  margin: 0 10px;
+  overflow: hidden;
+}
+
+.grid-6 {
+  width: 460px;
+  display: inline;
+  float: left;
+  margin: 0 10px;
+  overflow: hidden;
+}
+
+.grid-7 {
+  width: 540px;
+  display: inline;
+  float: left;
+  margin: 0 10px;
+  overflow: hidden;
+}
+
+.grid-8, #page-body {
   width: 620px;
+  display: inline;
+  float: left;
+  margin: 0 10px;
+  overflow: hidden;
 }
 
-#page-body {
+.grid-9, #nav {
+  width: 700px;
   display: inline;
   float: left;
   margin: 0 10px;
   overflow: hidden;
-  width: 620px;
 }
-#page-body.wide {
+
+.grid-10 {
+  width: 780px;
   display: inline;
   float: left;
   margin: 0 10px;
   overflow: hidden;
+}
+
+.grid-11 {
+  width: 860px;
+  display: inline;
+  float: left;
+  margin: 0 10px;
+  overflow: hidden;
+}
+
+.grid-12 {
   width: 940px;
-}
-
-#page-sidebar {
   display: inline;
   float: left;
   margin: 0 10px;
   overflow: hidden;
-  width: 300px;
 }
 
-#footer-body {
-  display: inline;
-  float: left;
-  margin: 0 10px;
-  overflow: hidden;
+.grid-full, #page-body.wide, #footer .content {
   width: 940px;
+  display: inline;
+  float: left;
+  margin: 0 10px;
+  overflow: hidden;
 }
 
-.common, #brand, #nav, #footer-body, #page-body, #page-body.wide, #page-sidebar {
-  background: #dddddd;
+.grid-prefix-1 {
+  padding-left: 80px;
+}
+
+.grid-prefix-2 {
+  padding-left: 160px;
+}
+
+.grid-prefix-3 {
+  padding-left: 240px;
+}
+
+.grid-prefix-4 {
+  padding-left: 320px;
+}
+
+.grid-prefix-5 {
+  padding-left: 400px;
+}
+
+.grid-prefix-6 {
+  padding-left: 480px;
+}
+
+.grid-prefix-7 {
+  padding-left: 560px;
+}
+
+.grid-prefix-8 {
+  padding-left: 640px;
+}
+
+.grid-prefix-9 {
+  padding-left: 720px;
+}
+
+.grid-prefix-10 {
+  padding-left: 800px;
+}
+
+.grid-prefix-11 {
+  padding-left: 880px;
+}
+
+.grid-suffix-1 {
+  padding-right: 80px;
+}
+
+.grid-suffix-2 {
+  padding-right: 160px;
+}
+
+.grid-suffix-3 {
+  padding-right: 240px;
+}
+
+.grid-suffix-4 {
+  padding-right: 320px;
+}
+
+.grid-suffix-5 {
+  padding-right: 400px;
+}
+
+.grid-suffix-6 {
+  padding-right: 480px;
+}
+
+.grid-suffix-7 {
+  padding-right: 560px;
+}
+
+.grid-suffix-8 {
+  padding-right: 640px;
+}
+
+.grid-suffix-9 {
+  padding-right: 720px;
+}
+
+.grid-suffix-10 {
+  padding-right: 800px;
+}
+
+.grid-suffix-11 {
+  padding-right: 880px;
+}
+
+.common, #brand, #nav, #page-body, #page-sidebar, #footer .content {
+  background: #444444;
+  color: white;
   margin-bottom: 20px;
   text-align: center;
 }
 
-#brand, #nav, #footer-body {
+#brand, #nav, #footer .content {
   line-height: 100px;
 }
 
-#page-body, #page-body.wide, #page-sidebar {
+#page-body, #page-sidebar {
   line-height: 400px;
 }
