--- a/stylesheets/_grid-coordinates.scss
+++ b/stylesheets/_grid-coordinates.scss
@@ -28,7 +28,8 @@ $grid-gutter-width: 20px !default;
       @include grid($i);
       @extend .grid-block; } }
   .grid-full {
-    @include grid($grid-columns); }
+    @include grid($grid-columns);
+    @extend .grid-block; }
   @for $i from 1 through $grid-columns - 1 {
     .grid-prefix-#{$i} {
       @include grid-prefix($i); } }
