--- a/templates/project/screen.css
+++ b/templates/project/screen.css
@@ -57,9 +57,10 @@ body {
 
 /* Grid-Coordinates by Adam Stacoviak
  * Fork me: http://adamstac.com/grid-coordinates */
-.grid-container, #header, #page, #footer {
+.grid-container, #extends {
   margin: 0 auto;
   overflow: hidden;
+  *zoom: 1;
   width: 960px;
 }
 
@@ -68,111 +69,133 @@ body {
   margin-left: -10px;
   margin-right: -10px;
   overflow: hidden;
+  *zoom: 1;
   width: auto;
+}
+
+.grid-block {
+  display: inline;
+  float: left;
+  overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
 }
 
 .grid-1 {
   width: 60px;
   display: inline;
   float: left;
-  margin: 0 10px;
   overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
 }
 
 .grid-2 {
   width: 140px;
   display: inline;
   float: left;
-  margin: 0 10px;
   overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
 }
 
-.grid-3, #brand {
+.grid-3 {
   width: 220px;
   display: inline;
   float: left;
-  margin: 0 10px;
   overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
 }
 
-.grid-4, #page-sidebar {
+.grid-4, #extends .sidebar {
   width: 300px;
   display: inline;
   float: left;
-  margin: 0 10px;
   overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
 }
 
 .grid-5 {
   width: 380px;
   display: inline;
   float: left;
-  margin: 0 10px;
   overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
 }
 
 .grid-6 {
   width: 460px;
   display: inline;
   float: left;
-  margin: 0 10px;
   overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
 }
 
 .grid-7 {
   width: 540px;
   display: inline;
   float: left;
-  margin: 0 10px;
   overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
 }
 
-.grid-8, #page-body {
+.grid-8, #extends .body {
   width: 620px;
   display: inline;
   float: left;
-  margin: 0 10px;
   overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
 }
 
-.grid-9, #nav {
+.grid-9 {
   width: 700px;
   display: inline;
   float: left;
-  margin: 0 10px;
   overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
 }
 
 .grid-10 {
   width: 780px;
   display: inline;
   float: left;
-  margin: 0 10px;
   overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
 }
 
 .grid-11 {
   width: 860px;
   display: inline;
   float: left;
-  margin: 0 10px;
   overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
 }
 
 .grid-12 {
   width: 940px;
   display: inline;
   float: left;
-  margin: 0 10px;
   overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
 }
 
-.grid-full, #page-body.wide, #footer .content {
+.grid-full, #extends .body.wide {
   width: 940px;
   display: inline;
   float: left;
-  margin: 0 10px;
   overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
 }
 
 .grid-prefix-1 {
@@ -263,10 +286,69 @@ body {
   padding-right: 880px;
 }
 
-.common, #brand, #nav, #page-body, #page-sidebar, #footer .content {
+#header, #mixins, #footer {
+  margin: 0 auto;
+  overflow: hidden;
+  *zoom: 1;
+  width: 960px;
+}
+
+#brand {
+  width: 220px;
+  display: inline;
+  float: left;
+  overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
+}
+
+#nav {
+  width: 700px;
+  display: inline;
+  float: left;
+  overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
+}
+
+#mixins .body {
+  width: 620px;
+  display: inline;
+  float: left;
+  overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
+}
+#mixins .body.wide {
+  width: 940px;
+  display: inline;
+  float: left;
+  overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
+}
+#mixins .sidebar {
+  width: 300px;
+  display: inline;
+  float: left;
+  overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
+}
+
+#footer .content {
+  width: 940px;
+  display: inline;
+  float: left;
+  overflow: hidden;
+  *zoom: 1;
+  margin: 0 10px;
+}
+
+.common, #brand, #nav, .body, .sidebar, #footer .content {
   background: #444444;
   color: white;
-  margin-bottom: 20px;
+  margin-bottom: 20px !important;
   text-align: center;
 }
 
@@ -274,6 +356,6 @@ body {
   line-height: 100px;
 }
 
-#page-body, #page-sidebar {
+.body, .sidebar {
   line-height: 400px;
 }
