--- a/templates/project/index.haml
+++ b/templates/project/index.haml
@@ -1,30 +1,17 @@
 !!! Strict
 %html
   %head
-    %title Grid Coordinates - Sample
+    %title Grid Coordinates - Example
     %link{:href => "screen.css", :media => "all", :rel => "stylesheet", :type => "text/css"}
   %body
     #header
-      #brand
-        .content
-          %p brand
-      #nav
-        .content
-          %p nav
-    #mixins
-      .body
-        .content
-          %p mixins body
-      .sidebar
-        .content
-          %p mixins sidebar
-    #extends
-      .body
-        .content
-          %p extends body
-      .sidebar
-        .content
-          %p extends sidebar
+      %h1 Website Name
+      #nav-main
+        This is the main navigation
+    #page
+      #content
+        This is the content section
+      #sidebar
+        This is the sidebar section
     #footer
-      .content
-        %p footer
+      This is the footer section
